inseriti bottoni inizio e fine

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="cont_btn">
+        <button id="btn">Inizia il gioco</button>
+        <button id="btn2">Resetta il gioco</button>
+    </div>
+
     <h1 id="cont"></h1>
     <div id="cont2"></div>
     <script src="./main.js"></script>
